# BAM-routing-client

./: .gitignore  .gitleaks.toml  .pylintrc  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
bam_router/: cli.py  client.py  latency.py  regions.py  router.py
docs/: api.md  index.md  quickstart.md
examples/: README.md  requirements.txt  send_bam.py  send_normal.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_integration.py  test_error_conditions.py
